tests/build/cases/widget_new/not_allowed_in_when1.stderr
error[E0599]: no associated item named `__w_0__` found for struct `foo` in the current scope
  --> cases/widget_new/not_allowed_in_when1.rs:15:26
   |
5  | #[property(CONTEXT)]
   | -------------------- associated item `__w_0__` not found for this struct
...
15 |             let node = *#foo;
   |                          ^^^ associated item not found in `foo`
